force-app/main/default/objects/vlocity_cmt__PaymentMethod__c/vlocity_cmt__PaymentMethod__c.object-meta.xml
<CustomObject>
    <description>Payment Method stores credit card or other payment processing information for an account.</description>
    <label>Payment Method</label>
    <nameField>
        <displayFormat>PM-{0000}</displayFormat>
        <label>Payment Method Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>