force-app/main/default/objects/vlocity_cmt__PaymentMethod__c/fields/BankRoutingNumber__c.field-meta.xml
<CustomField>
    <fullName>BankRoutingNumber__c</fullName>
    <label>BankRoutingNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>