force-app/main/default/objects/vlocity_cmt__PaymentMethod__c/fields/vlocity_cmt__BankAccountCountry__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__BankAccountCountry__c</fullName>
    <description>Country the bank account is established.</description>
    <label>Bank Account Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>