force-app/main/default/objects/vlocity_cmt__PaymentMethod__c/fields/vlocity_cmt__BankAccountHolderName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__BankAccountHolderName__c</fullName>
    <description>The name on the bank account.</description>
    <label>Bank Account Holder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>