force-app/main/default/objects/vlocity_cmt__PaymentMethod__c/fields/vlocity_cmt__BankAccountType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__BankAccountType__c</fullName>
    <label>Bank Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Checking</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>