force-app/main/default/objects/vlocity_cmt__PaymentMethod__c/fields/vlocity_cmt__CardHolderName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CardHolderName__c</fullName>
    <label>Card Holder Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>