force-app/main/default/objects/vlocity_cmt__PaymentMethod__c/fields/vlocity_cmt__ExpirationMonth__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ExpirationMonth__c</fullName>
    <label>Expiration Month</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
            <value>
                <fullName>03</fullName>
            </value>
            <value>
                <fullName>04</fullName>
            </value>
            <value>
                <fullName>05</fullName>
            </value>
            <value>
                <fullName>06</fullName>
            </value>
            <value>
                <fullName>07</fullName>
            </value>
            <value>
                <fullName>08</fullName>
            </value>
            <value>
                <fullName>09</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>