force-app/main/default/objects/vlocity_cmt__PaymentMethod__c/fields/vlocity_cmt__IBAN__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__IBAN__c</fullName>
    <description>International Bank Account Number.</description>
    <externalId>true</externalId>
    <label>IBAN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>