force-app/main/default/objects/vlocity_cmt__PaymentMethod__c/fields/vlocity_cmt__Last4Numbers__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Last4Numbers__c</fullName>
    <label>Last4Numbers</label>
    <length>20</length>
    <type>Text</type>
</CustomField>