force-app/main/default/objects/vlocity_cmt__PaymentMethod__c/fields/vlocity_cmt__PaymentCustomerIdentifier__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PaymentCustomerIdentifier__c</fullName>
    <description>Unique identifier of the customer generated in the Payment Gateway.</description>
    <externalId>true</externalId>
    <label>External Customer Identifier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>