force-app/main/default/objects/vlocity_cmt__PaymentMethod__c/fields/vlocity_cmt__PaymentMethodIdentifier__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PaymentMethodIdentifier__c</fullName>
    <description>Unique identifier of the payment method generated in the Payment Gateway.</description>
    <externalId>true</externalId>
    <label>External Payment Method Identifier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>