force-app/main/default/objects/vlocity_cmt__PaymentMethod__c/fields/vlocity_cmt__RoutingTransitNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__RoutingTransitNumber__c</fullName>
    <label>Routing Transit Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>