force-app/main/default/objects/vlocity_cmt__PaymentMethod__c/fields/vlocity_cmt__ValidityStartDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ValidityStartDate__c</fullName>
    <description>Validity period start for a payment method.</description>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>