force-app/main/default/objects/vlocity_cmt__PaymentMethod__c/validationRules/vlocity_cmt__EnforceActivePaymentMethodInAutoPay.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_cmt__EnforceActivePaymentMethodInAutoPay</fullName>
    <active>true</active>
    <errorConditionFormula>Id = vlocity_cmt__AccountId__r.vlocity_cmt__AutoPaymentMethodId__c &amp;&amp; ! vlocity_cmt__IsActive__c &amp;&amp; Id != null</errorConditionFormula>
    <errorDisplayField>vlocity_cmt__IsActive__c</errorDisplayField>
    <errorMessage>This payment method is used in auto pay and it can&apos;t be inactivated.</errorMessage>
</ValidationRule>