force-app/main/default/objects/vlocity_cmt__PaymentMethod__c/validationRules/vlocity_cmt__ExpirationYearIsValid.validationRule-meta.xml
<ValidationRule>
    <fullName>vlocity_cmt__ExpirationYearIsValid</fullName>
    <active>true</active>
    <description>Check that ExpirationYear is a valid year and in the future</description>
    <errorConditionFormula>AND( (ISPICKVAL(vlocity_cmt__MethodType__c,&apos;Credit Card&apos;)),(OR(!ISNUMBER(vlocity_cmt__ExpirationYear__c), VALUE(vlocity_cmt__ExpirationYear__c)&lt; YEAR( TODAY() ))))</errorConditionFormula>
    <errorDisplayField>vlocity_cmt__ExpirationYear__c</errorDisplayField>
    <errorMessage>Expiration Year is not valid</errorMessage>
</ValidationRule>